# Job-Seeker

./: .audit_pytest.txt  .audit_test_scraper_now.txt  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: profile.json
docs/superpowers/plans/: 2026-05-21-job-advisor-features.md
docs/superpowers/specs/: 2026-05-21-job-advisor-features-design.md
src/jobscout/: __init__.py  __main__.py  advisor.py  config.py  cv_tailor.py  main.py  matcher.py  profile.py  scam_detector.py  scraper.py  state.py
src/jobscout/providers/: __init__.py  anthropic.py  base.py  openai.py  opencode.py
tests/: __init__.py  conftest.py  test_advisor.py  test_cv_tailor.py  test_job_matcher.py  test_matcher.py  test_profile.py  test_scam_detector.py  test_scraper.py  test_state.py  test_web_app.py  test_web_flow.py  test_web_wizard.py  test_wizard_js.py
web/: app.py  pdf_parser.py  routes.py  wizard.py
web/static/: style.css  wizard.js
web/templates/: base.html  error.html  step1_upload.html  step2_config.html  step3_search_start.html  step3_searching.html  step4_results.html  step5_coaching.html  step5_tailor.html
