[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobscout"
version = "0.1.0"
description = "AI-powered job finder CLI tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Aniket Kumar Mishra", email = "armaanmishra86@gmail.com" }
]
keywords = ["job", "search", "ai", "matching", "career", "employment"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "flask>=3.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0",
]

dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "black>=24.0",
    "mypy>=1.9",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
jobscout = "jobscout.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jobscout"]

[tool.hatch]
path = "src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true